# aptoseidonBack

./: .gitignore  README.md  aptoseidon.db  pyproject.toml
app/: database.py  llm.py  main.py  models.py
app/agents/: collector.py  contradiction.py  credibility.py  narrative.py  risk.py  rules.py  synthesis.py
app/utils/: normalization.py  x402.py
